syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "PixKeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service PixKeymanagerGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service PixDeletaService {
  rpc deleta (DeletaChaveRequest) returns (DeletaChaveResponse){}
}

enum TipoDeChave {
  DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta{
  DESCONHECIDO_TIPO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message DeletaChaveRequest{
string pixId = 1;
string clienteId = 2;
}

message DeletaChaveResponse{
  string pixId = 1;
}